Add employee certifications staging and fact models

--- a/models/oliver/_src_oliver.yml
+++ b/models/oliver/_src_oliver.yml
@@ -11,3 +11,9 @@ sources:
       - name: orderline
       - name: orders
       - name: store
+
+  - name: employee_certifications
+    database: LUCYZENGER
+    schema: oliver_dw_source
+    tables:
+      - name: employee_certifications
